# hrdesk

./: .env.example  .gitignore  README.md  pyproject.toml
data/: faq.txt  leave_policy.md
evals/: README.md  eval_set.jsonl  run_evals.py
src/hrdesk/: __init__.py  config.py
src/hrdesk/agent/: agent.py  prompts.py
src/hrdesk/domain/: document.py  message.py
src/hrdesk/ingestion/: chunker.py  loaders.py  pipeline.py
src/hrdesk/observability/: logging.py
src/hrdesk/providers/: __init__.py  _lc_messages.py  anthropic.py  base.py  factory.py  ollama.py
src/hrdesk/retrieval/: _lc_conversion.py  embedder.py  hybrid.py  vector_store.py
src/hrdesk/tools/: base.py  profile.py  registry.py  vacation.py
src/hrdesk/web/: app.py
src/hrdesk/web/templates/: index.html
